--- a/GroupBuyHDDemo/GroupBuyHDDemo/Classes/Home/View/ZJHomeDropDown.xib
+++ b/GroupBuyHDDemo/GroupBuyHDDemo/Classes/Home/View/ZJHomeDropDown.xib
@@ -21,6 +21,10 @@
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nrN-lO-9nh" userLabel="从表">
                     <rect key="frame" x="179.5" y="0.0" width="179.5" height="366"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="iN0-l3-epB" id="VRY-EM-hvK"/>
+                        <outlet property="delegate" destination="iN0-l3-epB" id="77e-ph-E9R"/>
+                    </connections>
                 </tableView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
@@ -38,6 +42,7 @@
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="mainTableView" destination="iKq-PF-5ce" id="952-LC-vCO"/>
+                <outlet property="subTableView" destination="nrN-lO-9nh" id="X28-r7-t3G"/>
             </connections>
             <point key="canvasLocation" x="-132.5" y="271"/>
         </view>
