将dropDown中两个tableView的cell封装

--- a/GroupBuyHDDemo/GroupBuyHDDemo/Classes/Home/View/ZJHomeDropDown.xib
+++ b/GroupBuyHDDemo/GroupBuyHDDemo/Classes/Home/View/ZJHomeDropDown.xib
@@ -10,7 +10,7 @@
             <rect key="frame" x="0.0" y="0.0" width="359" height="366"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="iKq-PF-5ce" userLabel="主表">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="iKq-PF-5ce" userLabel="主表">
                     <rect key="frame" x="0.0" y="0.0" width="179.5" height="366"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
@@ -18,7 +18,7 @@
                         <outlet property="delegate" destination="iN0-l3-epB" id="sjN-O1-x49"/>
                     </connections>
                 </tableView>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nrN-lO-9nh" userLabel="从表">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="nrN-lO-9nh" userLabel="从表">
                     <rect key="frame" x="179.5" y="0.0" width="179.5" height="366"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <connections>
